--- a/final_template/logueado.html
+++ b/final_template/logueado.html
@@ -226,19 +226,12 @@ $(document).ready(function() {
 		<div id="logo"><h1><a href="./">Canvas<span class="colored">.</span></a></h1></div>
 		<div id="social">
 		  <ul>
+		    <li>
+                <a href = "subir.html"><button class="btn-custom1" type="button">Subir Diseño</button></a>
+		    </li>
 			<li> 
-				<div id="login">
-				    <form role="login" method="get" id="loginform" action="logueado.html" >
-                    <input type="text" name="id" maxlength="30" value="" id="id" />
-                    <input type="text" name="pw" maxlength="30" value="" id="pw"/>
-                    <input type="submit" class="btn-custom1" name="submit" value="Ingresar" />
-                    </form>
-			    </div>
+				<a href = "galery.html"><button class="btn-custom1" type="button">Salir</button></a>
 			</li>
-			<li> 
-				<a href="registro.html"><button class="btn-custom1" type="button">Registro</button></a>
-			</li>
-
 		  </ul>
 		</div>
 		<div id="spade">
@@ -252,7 +245,7 @@ $(document).ready(function() {
 <div class="wrapper">
 	<div id="header">
 		<div id="site-title">
-			<a href="http://canvas.pe" title="canvas">Viste tu Lienzo</a>
+			<a href="http://canvas.pe" title="canvas">victor.cornejo@ucsp.edu.pe</a>
 		</div>
 		<div id="header-left"><div class="menu"><ul><li id="menu-item-2" class="menu-item-2"><a></a></li></ul></div>
 </div>
